# spectec

.github/workflows/: animation.yml  ci-animation.yml
interpreter/valid/: match.mli
specification/wasm-3.0/: 0.2-aux.num.spectec  0.3-aux.seq.spectec  1.1-syntax.values.spectec  1.2-syntax.types.spectec  1.3-syntax.instructions.spectec  3.1-numerics.scalar.spectec  3.2-numerics.vector.spectec  4.0-execution.configurations.spectec  4.3-execution.instructions.spectec  4.4-execution.modules.spectec  6.3-text.modules.spectec
spectec/: Makefile  README.md  test_interpreter.sh
spectec/doc/: Latex.md
spectec/proofs/: SpecTecNumerics.thy
spectec/src/: dune
spectec/src/al/: al_util.ml  ast.ml  free.ml  print.ml  valid.ml  walk.ml
spectec/src/backend-animation/: animate.ml  animate.mli  common.ml  construct.ml  construct_v.ml  def.ml  dune  il2dl.ml  il_util.ml  inline.ml  interpreter.ml  interpreter_new.ml  interpreter_v.ml  main.ml  main_animate.ml  main_interpret.ml  main_interpret_v.ml  main_runner_v.ml  meta.spectec  numerics.ml  numerics_v.ml  occur.ml  relation.ml  script.ml  script_v.ml  spectest.ml  spectest_v.ml  state.ml  state_v.ml  util_new.ml  valid.ml  valid.mli  value.ml
spectec/src/backend-animation/interpreter-ocaml/: interpreter_ocaml.ml  main_interpreter_ocaml.ml  util_ocaml.ml
spectec/src/backend-ast/: print.ml
spectec/src/backend-interpreter/: ds.ml  ds.mli  dune  interpreter.ml  numerics.ml  runner.ml
spectec/src/backend-latex/: render.ml
spectec/src/il2al/: animate.ml  animate.mli  animate_new.ml  animate_new.mli  def.ml  dune  encode.ml  free.ml  il2al_util.ml  il2dl.ml  il_validator_new.ml  il_walk.ml  preprocess.ml  preprocess.mli  print.ml  print.mli  translate.ml  translate.mli  unify.ml  unify.mli
spectec/test-interpreter/: sample.wast
spectec/test-prose/: dune
spectec/test-splice/: spec-sphinx.in.rst
(+38 files in other folders)
