(library
  (name backend_animation)
  (libraries util frontend il al backend_ast il2al str tsort reference_interpreter backend_interpreter)
  (modules
    main_animate
    main_interpret
    animate
    construct
    def
    il2dl
    il_util
    interpreter
    script
    valid
    interpreter_new
    util_new
  )
)

(env (dev (flags :standard -w -8-26-27-32-33-34)))