(include_subdirs unqualified)

(library
  (name backend_animation)
  (libraries util frontend il al backend_ast il2al str tsort reference_interpreter backend_interpreter)
  (modules
    main_animate
    main_interpret
    animate
    common
    construct
    def
    il2dl
    il_util
    inline
    interpreter
    numerics
    occur
    script
    state
    valid
    value
    ; interpreter-ocaml
    main_interpreter_ocaml
    interpreter_ocaml
    util_ocaml
    ; VL
    construct_v
    interpreter_v
    numerics_v
    state_v
    script_v
    main_interpret_v
  )
)

(env (dev (flags :standard -w -8-26-27-32-33-34)))