(library
  (name il2al)
  (libraries util frontend il al backend_ast str)
  (modules
    animate
    unify
    manual
    translate
    transpile
    free
    preprocess
    postprocess
    il_walk
    encode
    def
    il2dl
    il2al_util
    print
    animate_new
  )
)

(env (dev (flags :standard -w -8-26-27-32-33-34)))